--- a/TamagotchiApp/TamagotchiApp/TamagotchiApp.csproj
+++ b/TamagotchiApp/TamagotchiApp/TamagotchiApp.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="login_bg.jpg" />
     <None Remove="tamagotchi.jpg" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="login_bg.jpg" />
     <Resource Include="tamagotchi.jpg" />
   </ItemGroup>
 
