--- a/TamagotchiVue/tamagotchi-vue/package.json
+++ b/TamagotchiVue/tamagotchi-vue/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "bootstrap": "^5.3.0-alpha1",
+    "moment": "^2.29.4",
     "vitest": "^0.28.5",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
